--- a/Version.cpp.in
+++ b/Version.cpp.in
@@ -1,13 +1,13 @@
-#include "version.hh"
+#include "Version.h"
 
-// using namespace my_app;
+namespace version {
 
-namespace hydro_playground {
+const int Version::MINOR = @hydro_playground_VERSION_MINOR@;
+const int Version::MAJOR = @hydro_playground_VERSION_MAJOR@;
 
 const std::string Version::GIT_SHA1 = "@GIT_SHA1@";
 const std::string Version::GIT_DATE = "@GIT_DATE@";
 const std::string Version::GIT_BRANCH = "@GIT_BRANCH@";
 const std::string Version::GIT_COMMIT_SUBJECT = "@GIT_COMMIT_SUBJECT@";
-
 
 }
