--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,25 +1,14 @@
-target_sources(hydro PUBLIC
-    # Logging.cpp Logging.h
-    Utils.cpp Utils.h
-    # Version.h
-    )
+
+add_library(Version "${CMAKE_BINARY_DIR}/Version.cpp" Version.h)
+target_include_directories(Version PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_library(Logging Logging.cpp Logging.h)
 
-# add_library(Utils Utils.cpp Utils.h) # "${CMAKE_BINARY_DIR}/Version.cpp" Version.h)
-# target_sources(Utils PUBLIC "${CMAKE_BINARY_DIR}/Version.cpp" Version.h)
-# target_include_directories(Utils PUBLIC src)
+add_library(Utils Utils.cpp Utils.h)
+target_link_libraries(Utils Version)
 
 
 
-# target_sources(Logging PRIVATE
-#     Logging.cpp Logging.h
-    # Utils.cpp Utils.h
-    # )
-#
-# add_executable(hydro main.cpp)
 target_link_libraries(hydro Logging)
-# target_link_libraries(hydro Utils)
-#
-
+target_link_libraries(hydro Utils)
 
