started on documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 build/
 **/.cache
 compile_commands.json
+
+*.run.xml
+*.bbl
+*.blg
+*.out
+*-blx.bib
+*.aux
+*.log
+*.nav
+*.synctex.gz
+*.o
+*.toc
+
+**/__pycache__
+*.pyc
+black_formatting_env/**
