--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -2,4 +2,5 @@
 // Variables enclosed by '@' are generated with CMake.
 
 #define DEBUG_LEVEL @DEBUG_LEVEL@
+#define CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
 
