--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -4,5 +4,8 @@
 #define DEBUG_LEVEL @DEBUG_LEVEL@
 #define CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
 
+// Global dimensions macro; change this to be fetched
+// from CMake in the future...
+#define Dimensions 2;
 
 typedef float Precision;
