--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@
 
 cmake_minimum_required(VERSION 3.21)
 
-project(hydro_playground
-        VERSION 1.0)
+project(hydro_playground VERSION 1.0)
 set(LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_EXPORT_COMPILE_COMMANDS On)
 
 
 
