--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -74,17 +74,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Configure CMake - RelWithDebugInfo
+    - name: Configure CMake - RelWithDebInfo
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build_rel_with_deb_info -DCMAKE_BUILD_TYPE=RelWithDebugInfo
+      run: cmake -B ${{github.workspace}}/build_rel_with_deb_info -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
-    - name: Build RelWithDebugInfo
+    - name: Build RelWithDebInfo
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build_rel_with_deb_info
       # --config ${{env.BUILD_TYPE}}
 
-    - name: Test RelWithDebugInfo
+    - name: Test RelWithDebInfo
       working-directory: ${{github.workspace}}/build_rel_with_deb_info/tests
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
