--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -1,10 +1,17 @@
-// Some global definitions.
-// File is generated from template src/Config.h.in
-// Variables enclosed by '@' are generated with CMake.
+/**
+ * @brief Some global definitions.
+ * File is generated from template src/Config.h.in
+ * Variables enclosed by '@' are generated with CMake.
+ */
 #pragma once
 
 #define DEBUG_LEVEL @DEBUG_LEVEL@
-#define CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
+
+constexpr char CMAKE_BUILD_TYPE[] ="@CMAKE_BUILD_TYPE@";
+
+// make sure to add trailing slash here.
+constexpr char CMAKE_SOURCE_DIR[] ="@CMAKE_SOURCE_DIR@/";
+
 
 // Global dimensions macro; change this to be fetched
 // from CMake in the future...
