--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,13 @@
 add_library(Version OBJECT "${CMAKE_BINARY_DIR}/Version.cpp" Version.h)
 target_include_directories(Version PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_library(Logging OBJECT Logging.cpp Logging.h)
+add_library(Logging OBJECT Logging.cpp Logging.h Termcolors.h)
 target_include_directories(Logging PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
 
 add_library(Parameters OBJECT Parameters.cpp Parameters.h BoundaryConditions.h)
 target_include_directories(Parameters PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
 
-add_library(Utils OBJECT Utils.cpp Utils.h)
+add_library(Utils OBJECT Utils.cpp Utils.h Termcolors.h)
 target_include_directories(Utils PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
 target_link_libraries(Utils Version)
 target_link_libraries(Utils Logging)
