added theory to github workflow

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -22,3 +22,16 @@ jobs:
             root_file: documentation.tex
             working_directory: tex/documentation
 
+  build_theory:
+    # https://github.com/marketplace/actions/github-action-for-latex
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v3 
+        with:
+            root_file: theory.tex
+            working_directory: tex/theory
+
