--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -10,6 +10,15 @@
 #define SINGLE_PRECISION 1
 #define DOUBLE_PRECISION 2
 
+#define SOLVER_MUSCL 11
+#define SOLVER_GODUNOV 12
+
+#define RIEMANN_SOLVER_HLLC 21
+#define RIEMANN_SOLVER_EXACT 22
+
+#define LIMITER_MINMOD 31
+#define LIMITER_VANLEER 32
+
 
 constexpr const char* CMAKE_BUILD_TYPE ="@CMAKE_BUILD_TYPE@";
 
