--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,12 +33,34 @@ target_include_directories(IO PUBLIC "${PROJECT_BINARY_DIR}") # we need this for
 target_link_libraries(IO Logging)
 target_link_libraries(IO Utils)
 
+add_library(SolverBase OBJECT Solver.h SolverBase.h SolverBase.cpp)
+target_include_directories(SolverBase PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
+target_link_libraries(SolverBase Grid)
+target_link_libraries(SolverBase Parameters)
+target_link_libraries(SolverBase Logging)
+
+add_library(SolverMUSCL OBJECT Solver.h SolverMUSCL.h SolverMUSCL.cpp)
+target_include_directories(SolverMUSCL PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
+target_link_libraries(SolverMUSCL SolverBase)
+
+add_library(SolverGodunov OBJECT Solver.h SolverGodunov.h SolverGodunov.cpp)
+target_include_directories(SolverGodunov PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
+target_link_libraries(SolverGodunov SolverBase)
+
+
+
+
+
+
 
 # Linking to the main executable
 # ------------------------------
 # Order matters here! E.g. Utils needs Version and Logging. If you put them before Utils,
 # Utils won't find its link dependencies during the executable linking step.
 # The target_link_libraries of Utils above only applies to the compile step of the object library above.
+target_link_libraries(hydro SolverMUSCL)
+target_link_libraries(hydro SolverGodunov)
+target_link_libraries(hydro SolverBase)
 target_link_libraries(hydro IO)
 target_link_libraries(hydro Grid)
 target_link_libraries(hydro Cell)
