--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,3 +15,10 @@ target_link_libraries(test_io Cell)
 target_link_libraries(test_io Parameters)
 target_link_libraries(test_io Gas)
 target_include_directories(test_io PUBLIC "${CMAKE_SOURCE_DIR}/src")
+
+
+add_executable(test_gas test_gas.cpp)
+target_link_libraries(test_gas Gas)
+target_link_libraries(test_gas Logging)
+target_include_directories(test_gas PUBLIC "${CMAKE_SOURCE_DIR}/src")
+target_include_directories(test_gas PUBLIC "${PROJECT_BINARY_DIR}") # we need this for Config.h
