--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -38,6 +38,8 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./test_logging
+      run: ./test_io
+      run: ./test_gas
 
   build_debug:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -63,6 +65,8 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./test_logging
+      run: ./test_io
+      run: ./test_gas
 
       
   build_relWithDebugInfo:
@@ -89,4 +93,6 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./test_logging
+      run: ./test_io
+      run: ./test_gas
 
