cleaned up cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,17 +183,13 @@ endif()
 # Main Target
 # ---------------------------
 
-# add_subdirectory(src) # this is for adding a CMakeLists.txt file in src/
-
 configure_file(src/Config.h.in Config.h)
 
 
+#  --------------------------------------------------------------------------------------------------------
 file(GLOB_RECURSE CPP_SRC_FILES FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/*.cpp)
-file(GLOB_RECURSE VERSION_CPP FOLLOW_SYMLINKS ${PROJECT_BINARY_DIR}/Version.cpp)
 # file(GLOB_RECURSE CUDA_SRC_FILES FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/*.cu)
 # file(GLOB_RECURSE HIP_SRC_FILES FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/*.hip)
-# file(GLOB_RECURSE SRC_FILES FOLLOW_SYMLINKS ${CPP_SRC_FILES} ${HIP_SRC_FILES})
-file(GLOB_RECURSE SRC_FILES FOLLOW_SYMLINKS ${CPP_SRC_FILES} ${VERSION_CPP})
 file(GLOB_RECURSE MAIN_FILE FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/main.cpp)
 list(REMOVE_ITEM CPP_SRC_FILES ${MAIN_FILE})
 
@@ -202,16 +198,12 @@ set(COMMON_INCLUDES ${COMMON_INCLUDES} ${PROJECT_BINARY_DIR}) # include generate
 include_directories(${COMMON_INCLUDES})
 
 
-add_library(objects OBJECT ${SRC_FILES})
-target_include_directories(objects PUBLIC "${COMMON_INCLUDES}")
+add_library(objects OBJECT ${CPP_SRC_FILES} ${PROJECT_BINARY_DIR}/Version.cpp)
 
 
-# EXECUTABLE : PROJECT_NAME
-add_executable(hydro ${MAIN_FILE} $<TARGET_OBJECTS:objects>)
+# MAIN EXECUTABLE: hydro
+add_executable(hydro ${MAIN_FILE})
 target_link_libraries(hydro PUBLIC objects)
-target_include_directories(hydro PUBLIC "${COMMON_INCLUDES}")
-
-
 
 
 
@@ -226,6 +218,7 @@ enable_testing()
 add_test(NAME logging COMMAND test_logging)
 add_test(NAME io COMMAND test_io)
 add_test(NAME gas COMMAND test_gas)
+
 
 
 # ----------------------------------
